--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,5 @@ edition = "2018"
 serenity = { version = "0.10", default-features = true, features = [ "collector" ]}
 tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
 dotenv = "0.15"
+image = "0.23.12"
+qrcode = "0.12.0"
